# bs_requests_parser_braincomua

./: .gitignore  Readme.md  docker-compose.yml  pyproject.toml
braincomua_bs_project/: manage.py
braincomua_bs_project/braincomua_bs_project/: asgi.py  settings.py  urls.py  wsgi.py
braincomua_bs_project/parser_app/: models.py
braincomua_bs_project/parser_app/migrations/: 0001_initial.py
files/: page.html
modules/: 1_bs_parser.py  load_django.py
modules/config/: headers.py  logger_config.py
modules/utils/: get_informations.py  storage.py
results/: products.csv
